# CryptoCom

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: continuous-integration.yml
include/CryptoCom/: ElGamal.h
src/: ElGamal.Test.cpp
test/: RoundTrip.Test.cpp
